--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,18 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0",
-        "illuminate/view": "^8.0 || ^9.0",
-        "latte/latte": "^2.9"
+        "php": ">=8.0",
+        "illuminate/view": "^9.0 || ^10.0",
+        "latte/latte": "^3.0"
     },
     "autoload": {
         "psr-4": {
             "Miko\\LaravelLatte\\": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.x-dev"
         }
     }
 }
