--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,29 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
-        "illuminate/view": "^9.0 || ^10.0",
+        "php": ">=8.2",
+        "illuminate/view": "11.x-dev",
         "latte/latte": "^3.0"
+    },
+    "require-dev": {
+        "laravel/framework": "11.x-dev",
+        "livewire/livewire": "^3.4",
+        "phpunit/phpunit": "^10.0",
+        "ssddanbrown/asserthtml": "^3.0"
     },
     "autoload": {
         "psr-4": {
             "Miko\\LaravelLatte\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Miko\\LaravelLatte\\Tests\\": "tests/"
+        }
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.x-dev"
+            "dev-master": "3.x-dev"
         }
     }
 }
