--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "11.x-dev",
         "livewire/livewire": "^3.4",
         "phpunit/phpunit": "^10.0",
-        "ssddanbrown/asserthtml": "^3.0"
+        "ssddanbrown/asserthtml": "^3.0",
+        "tracy/tracy": "^2.10"
     },
     "autoload": {
         "psr-4": {
