--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=8.2",
-        "illuminate/view": "^11.0",
+        "illuminate/view": "^11.0 || ^12.0",
         "latte/latte": "^3.0"
     },
     "require-dev": {
